fixed the misalignment of selector bar glitch

--- a/src/App.css
+++ b/src/App.css
@@ -93,14 +93,7 @@ table {
 
 .selector-open {
   background-color: transparent;
-  height: 80px;
-  width: 80px;
   
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
 }
 
 .trap {
